--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
                   aria-expanded="false"
                 >
                   <i class="header-map-icon"></i>
-                  <span class="sm-text">Челябинск, Молодогвардейцев, 54а</span>
+                  <span class="sm-text">Молодогвардейцев, 54а</span>
                 </a>
 
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                   <li>
-                    <a class="dropdown-item" href="#">Посмотреть в 2gis</a>
+                    <a class="dropdown-item" target="_blank" href="https://2gis.ru/chelyabinsk/firm/70000001058685676">Посмотреть в 2gis</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" target="_blank" href="https://yandex.ru/maps/org/44584420746/"
                       >Посмотреть в Яндекс.Картах</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" target="_blank" href="https://goo.gl/maps/uprruAhvvh4CpHdy6"
                       >Посмотреть в Google.Maps</a
                     >
                   </li>
@@ -932,14 +932,6 @@
         </div>
       </div>
 
-      <!-- <div class="container block">
-        <div class="row">
-          <div class="col-12">
-            <h2>Услуги</h2>
-          </div>
-        </div>
-      </div> -->
-
       <div class="container block">
         <div class="row">
           <div class="col-12">
@@ -1016,11 +1008,6 @@
                   </div>
                   <div class="col-8 col-sm-9">
                     <h4>Полина</h4>
-                    <!-- <div class="row">
-                      <div class="col-12 btn-master">
-                        <a href="tel:+79514589035">+7(951)458-90-35</a>
-                      </div>
-                    </div> -->
                     <div class="row">
                       <div class="col-12 btn-master">
                         <a href="https://dikidi.ru/#widget=78407"
@@ -1046,11 +1033,6 @@
                   </div>
                   <div class="col-8 col-sm-9">
                     <h4>Анастасия</h4>
-                    <!-- <div class="row">
-                      <div class="col-12 btn-master">
-                        <a href="tel:+79227458737">+7(922)745-87-37</a>
-                      </div>
-                    </div> -->
                     <div class="row">
                       <div class="col-12 btn-master">
                         <a href="https://dikidi.ru/#widget=78405"
@@ -1076,11 +1058,6 @@
                   </div>
                   <div class="col-8 col-sm-9">
                     <h4>Валерия</h4>
-                    <!-- <div class="row">
-                      <div class="col-12 btn-master">
-                        <a href="tel:+79000635807">+7(900)063-58-07</a>
-                      </div>
-                    </div> -->
                     <div class="row">
                       <div class="col-12 btn-master">
                         <a href="https://dikidi.ru/#widget=78409"
@@ -1190,9 +1167,6 @@
               <a href="https://www.instagram.com/apstudio_74/" target="blank">
                 <i class="i i-50 i-inst"></i>
               </a>
-              <!-- <a href="https://t.me/+_uJAofcVE0JmYmQy" target="blank">
-                <i class="i i-50 i-tg"></i>
-              </a> -->
             </div>
           </div>
         </div>
@@ -1207,89 +1181,6 @@
                 <b>ул. Молодогвардейцев, 54а (ТК Максимум, 302 офис, 3 этаж, вход через Пятерочку)</b><br />
                 Ежедневно с 10:00 до 22:00
               </p>
-              <!-- <p>
-                <a href="tel:+79227458737">
-                  <svg
-                    width="20"
-                    height="20"
-                    viewBox="0 0 20 20"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M16.5342 14.3473V16.5354C16.5351 16.7385 16.4934 16.9396 16.4118 17.1257C16.3303 17.3118 16.2107 17.4789 16.0607 17.6162C15.9108 17.7535 15.7337 17.8581 15.5409 17.9231C15.3481 17.9882 15.1438 18.0124 14.9411 17.9941C12.6923 17.7502 10.5322 16.9833 8.63429 15.755C6.86855 14.6352 5.37151 13.1411 4.24949 11.3789C3.01442 9.47614 2.24581 7.30982 2.00593 5.05539C1.98767 4.8537 2.01169 4.65043 2.07645 4.45851C2.14122 4.26659 2.24532 4.09023 2.38212 3.94066C2.51893 3.7911 2.68543 3.6716 2.87105 3.58977C3.05666 3.50795 3.25731 3.46559 3.46022 3.4654H5.65262C6.00729 3.46192 6.35112 3.58726 6.62003 3.81807C6.88894 4.04887 7.06459 4.3694 7.11423 4.71989C7.20676 5.42012 7.37837 6.10765 7.62579 6.76937C7.72411 7.03042 7.74539 7.31413 7.6871 7.58689C7.62882 7.85964 7.49341 8.11 7.29693 8.3083L6.36881 9.23458C7.40914 11.0605 8.92402 12.5724 10.7536 13.6107L11.6817 12.6844C11.8804 12.4883 12.1313 12.3532 12.4046 12.295C12.6779 12.2368 12.9621 12.2581 13.2237 12.3562C13.8867 12.6031 14.5756 12.7744 15.2773 12.8668C15.6323 12.9167 15.9565 13.0952 16.1882 13.3682C16.42 13.6412 16.5431 13.9896 16.5342 14.3473Z"
-                      stroke="#48484D"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                    <path
-                      d="M10.6456 5.43918C11.5911 5.47875 12.5251 5.8595 13.247 6.58145C14.02 7.35444 14.4019 8.37044 14.3926 9.38353"
-                      stroke="#48484D"
-                      stroke-linecap="round"
-                    />
-                    <path
-                      d="M11.1196 2.20742C12.6844 2.2729 14.23 2.90304 15.4248 4.09783C16.7041 5.37708 17.336 7.05851 17.3206 8.73512"
-                      stroke="#48484D"
-                      stroke-linecap="round"
-                    />
-                  </svg>
-                  +7 (922) 745-87-37 — Анастасия</a
-                ><br />
-                <a href="tel:+79514589035">
-                  <svg
-                    width="20"
-                    height="20"
-                    viewBox="0 0 20 20"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M16.5342 14.3473V16.5354C16.5351 16.7385 16.4934 16.9396 16.4118 17.1257C16.3303 17.3118 16.2107 17.4789 16.0607 17.6162C15.9108 17.7535 15.7337 17.8581 15.5409 17.9231C15.3481 17.9882 15.1438 18.0124 14.9411 17.9941C12.6923 17.7502 10.5322 16.9833 8.63429 15.755C6.86855 14.6352 5.37151 13.1411 4.24949 11.3789C3.01442 9.47614 2.24581 7.30982 2.00593 5.05539C1.98767 4.8537 2.01169 4.65043 2.07645 4.45851C2.14122 4.26659 2.24532 4.09023 2.38212 3.94066C2.51893 3.7911 2.68543 3.6716 2.87105 3.58977C3.05666 3.50795 3.25731 3.46559 3.46022 3.4654H5.65262C6.00729 3.46192 6.35112 3.58726 6.62003 3.81807C6.88894 4.04887 7.06459 4.3694 7.11423 4.71989C7.20676 5.42012 7.37837 6.10765 7.62579 6.76937C7.72411 7.03042 7.74539 7.31413 7.6871 7.58689C7.62882 7.85964 7.49341 8.11 7.29693 8.3083L6.36881 9.23458C7.40914 11.0605 8.92402 12.5724 10.7536 13.6107L11.6817 12.6844C11.8804 12.4883 12.1313 12.3532 12.4046 12.295C12.6779 12.2368 12.9621 12.2581 13.2237 12.3562C13.8867 12.6031 14.5756 12.7744 15.2773 12.8668C15.6323 12.9167 15.9565 13.0952 16.1882 13.3682C16.42 13.6412 16.5431 13.9896 16.5342 14.3473Z"
-                      stroke="#48484D"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                    <path
-                      d="M10.6456 5.43918C11.5911 5.47875 12.5251 5.8595 13.247 6.58145C14.02 7.35444 14.4019 8.37044 14.3926 9.38353"
-                      stroke="#48484D"
-                      stroke-linecap="round"
-                    />
-                    <path
-                      d="M11.1196 2.20742C12.6844 2.2729 14.23 2.90304 15.4248 4.09783C16.7041 5.37708 17.336 7.05851 17.3206 8.73512"
-                      stroke="#48484D"
-                      stroke-linecap="round"
-                    />
-                  </svg>
-                  +7 (951) 458-90-35 — Полина</a
-                ><br />
-                <a href="tel:+79000635807">
-                  <svg
-                    width="20"
-                    height="20"
-                    viewBox="0 0 20 20"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M16.5342 14.3473V16.5354C16.5351 16.7385 16.4934 16.9396 16.4118 17.1257C16.3303 17.3118 16.2107 17.4789 16.0607 17.6162C15.9108 17.7535 15.7337 17.8581 15.5409 17.9231C15.3481 17.9882 15.1438 18.0124 14.9411 17.9941C12.6923 17.7502 10.5322 16.9833 8.63429 15.755C6.86855 14.6352 5.37151 13.1411 4.24949 11.3789C3.01442 9.47614 2.24581 7.30982 2.00593 5.05539C1.98767 4.8537 2.01169 4.65043 2.07645 4.45851C2.14122 4.26659 2.24532 4.09023 2.38212 3.94066C2.51893 3.7911 2.68543 3.6716 2.87105 3.58977C3.05666 3.50795 3.25731 3.46559 3.46022 3.4654H5.65262C6.00729 3.46192 6.35112 3.58726 6.62003 3.81807C6.88894 4.04887 7.06459 4.3694 7.11423 4.71989C7.20676 5.42012 7.37837 6.10765 7.62579 6.76937C7.72411 7.03042 7.74539 7.31413 7.6871 7.58689C7.62882 7.85964 7.49341 8.11 7.29693 8.3083L6.36881 9.23458C7.40914 11.0605 8.92402 12.5724 10.7536 13.6107L11.6817 12.6844C11.8804 12.4883 12.1313 12.3532 12.4046 12.295C12.6779 12.2368 12.9621 12.2581 13.2237 12.3562C13.8867 12.6031 14.5756 12.7744 15.2773 12.8668C15.6323 12.9167 15.9565 13.0952 16.1882 13.3682C16.42 13.6412 16.5431 13.9896 16.5342 14.3473Z"
-                      stroke="#48484D"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                    <path
-                      d="M10.6456 5.43918C11.5911 5.47875 12.5251 5.8595 13.247 6.58145C14.02 7.35444 14.4019 8.37044 14.3926 9.38353"
-                      stroke="#48484D"
-                      stroke-linecap="round"
-                    />
-                    <path
-                      d="M11.1196 2.20742C12.6844 2.2729 14.23 2.90304 15.4248 4.09783C16.7041 5.37708 17.336 7.05851 17.3206 8.73512"
-                      stroke="#48484D"
-                      stroke-linecap="round"
-                    />
-                  </svg>
-                  +7 (900) 063-58-07 — Валерия</a
-                >
-              </p> -->
               <p>
                   <a href="tel:+79511218261">
                       <svg
