--- a/index.html
+++ b/index.html
@@ -747,8 +747,8 @@
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">600₽</div>
-          <div class="col-3">600₽</div>
+          <div class="col-3">800₽</div>
+          <div class="col-3">800₽</div>
         </div>
         <div class="row gx-3 row-price">
           <div class="col-6">
@@ -758,13 +758,24 @@
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">1 400₽</div>
-          <div class="col-3">1 250₽</div>
+          <div class="col-3">1 500₽</div>
+          <div class="col-3">1 350₽</div>
         </div>
         <div class="row gx-3 row-price">
           <div class="col-6">
             <a href="#">
               - наращивание
+              <span class="service-execution-time">(3&#160;часа)</span>
+              <div class="question-mark"></div>
+            </a>
+          </div>
+          <div class="col-3">2 100₽</div>
+          <div class="col-3">1 700₽</div>
+        </div>
+        <div class="row gx-3 row-price">
+          <div class="col-6">
+            <a href="#">
+              - коррекция
               <span class="service-execution-time">(3&#160;часа)</span>
               <div class="question-mark"></div>
             </a>
@@ -775,24 +786,13 @@
         <div class="row gx-3 row-price">
           <div class="col-6">
             <a href="#">
-              - коррекция
-              <span class="service-execution-time">(3&#160;часа)</span>
-              <div class="question-mark"></div>
-            </a>
-          </div>
-          <div class="col-3">1 800₽</div>
-          <div class="col-3">1 500₽</div>
-        </div>
-        <div class="row gx-3 row-price">
-          <div class="col-6">
-            <a href="#">
-              - окончательное снятие покрытия + уход
+              - безопасное снятие покрытия + уход (включён маникюр)
               <span class="service-execution-time">(1&#160;час)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3 text-transfom-none">650₽</div>
-          <div class="col-3 text-transfom-none">650₽</div>
+          <div class="col-3 text-transfom-none">850₽</div>
+          <div class="col-3 text-transfom-none">850₽</div>
         </div>
         <div class="row gx-3">
           <div class="col-12"><b>Педикюр</b></div>
@@ -805,8 +805,8 @@
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">1 300₽</div>
-          <div class="col-3">1 300₽</div>
+          <div class="col-3">1 500₽</div>
+          <div class="col-3">1 500₽</div>
         </div>
         <div class="row gx-3 row-price">
           <div class="col-6">
@@ -816,8 +816,8 @@
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">1 500₽</div>
-          <div class="col-3">1 500₽</div>
+          <div class="col-3">1 800₽</div>
+          <div class="col-3">1 800₽</div>
         </div>
         <div class="row gx-3 row-price">
           <div class="col-6">
@@ -827,8 +827,8 @@
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">1 800₽</div>
-          <div class="col-3">1 800₽</div>
+          <div class="col-3">2 200₽</div>
+          <div class="col-3">2 200₽</div>
         </div>
         <div class="row gx-3">
           <div class="col-12"><b>Для мужчин</b></div>
@@ -841,8 +841,8 @@
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">600₽</div>
-          <div class="col-3">600₽</div>
+          <div class="col-3">800₽</div>
+          <div class="col-3">800₽</div>
         </div>
         <div class="row gx-3 row-price">
           <div class="col-6">
@@ -852,8 +852,8 @@
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">1 300₽</div>
-          <div class="col-3">1 300₽</div>
+          <div class="col-3">1 400₽</div>
+          <div class="col-3">1 400₽</div>
         </div>
         <div class="row gx-3 row-price">
           <div class="col-6">
@@ -863,8 +863,8 @@
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">1 800₽</div>
-          <div class="col-3">1 800₽</div>
+          <div class="col-3">2 000₽</div>
+          <div class="col-3">2 000₽</div>
         </div>
         <div class="row gx-3">
           <div class="col-12"><b>Дополнительно</b></div>
