--- a/index.html
+++ b/index.html
@@ -769,19 +769,19 @@
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">2 100₽</div>
-          <div class="col-3">1 700₽</div>
+          <div class="col-3">2 500₽</div>
+          <div class="col-3">2 000₽</div>
         </div>
         <div class="row gx-3 row-price">
           <div class="col-6">
             <a href="#">
-              - коррекция
+              - коррекция наращивания
               <span class="service-execution-time">(3&#160;часа)</span>
               <div class="question-mark"></div>
             </a>
           </div>
           <div class="col-3">2 000₽</div>
-          <div class="col-3">1 600₽</div>
+          <div class="col-3">1 800₽</div>
         </div>
         <div class="row gx-3 row-price">
           <div class="col-6">
