--- a/index.html
+++ b/index.html
@@ -733,31 +733,30 @@
           </div>
         </div>
         <div class="row gx-3">
-          <div class="col-3 offset-9"><b>Топ-мастер: Анастасия, Полина</b></div>
+          <div class="col-4 offset-8"><b>Топ-мастер</b></div>
         </div>
         <div class="row gx-3">
           <div class="col-12"><b>Маникюр</b></div>
         </div>
         <div class="row gx-3 row-price">
-          <div class="col-9">
+          <div class="col-8">
             <a href="#">
-              - без покрытия
+              - маникюр без покрытия
               <span class="service-execution-time">(1&#160;час)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">800₽</div>
+          <div class="col-4">800₽</div>
         </div>
         <div class="row gx-3 row-price">
-          <div class="col-6">
+          <div class="col-8">
             <a href="#">
-              - с укреплением и покрытием
+              - маникюр с покрытием
               <span class="service-execution-time">(2&#160;часа)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">1 500₽</div>
-          <div class="col-3">1 350₽</div>
+          <div class="col-4">1 800₽</div>
         </div>
         <div class="row gx-3 row-price">
           <div class="col-6">
