Update pricelist 20 may 2024

--- a/index.html
+++ b/index.html
@@ -736,13 +736,46 @@
           <div class="col-4 offset-8"><b>Топ-мастер</b></div>
         </div>
         <div class="row gx-3">
+          <div class="col-12"><b>Акция: Маникюр + Педикюр</b></div>
+        </div>
+        <div class="row gx-3 row-price">
+          <div class="col-8">
+            <a href="#">
+              - маникюр + педикюр «Пальчики»
+              <span class="service-execution-time">(4&#160;часа)</span>
+              <div class="question-mark"></div>
+            </a>
+          </div>
+          <div class="col-4">3&#160;500₽</div>
+        </div>
+        <div class="row gx-3 row-price">
+          <div class="col-8">
+            <a href="#">
+              - маникюр + педикюр «Гигиенаи»
+              <span class="service-execution-time">(4&#160;часа)</span>
+              <div class="question-mark"></div>
+            </a>
+          </div>
+          <div class="col-4">3&#160;700₽</div>
+        </div>
+        <div class="row gx-3 row-price">
+          <div class="col-8">
+            <a href="#">
+              - маникюр + педикюр «Полный»
+              <span class="service-execution-time">(4&#160;часа)</span>
+              <div class="question-mark"></div>
+            </a>
+          </div>
+          <div class="col-4">4&#160;200₽</div>
+        </div>
+        <div class="row gx-3">
           <div class="col-12"><b>Маникюр</b></div>
         </div>
         <div class="row gx-3 row-price">
           <div class="col-8">
             <a href="#">
               - маникюр без покрытия
-              <span class="service-execution-time">(1&#160;час)</span>
+              <span class="service-execution-time">(1&#160;час 30&#160;минут)</span>
               <div class="question-mark"></div>
             </a>
           </div>
@@ -756,170 +789,149 @@
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-4">1 800₽</div>
+          <div class="col-4">1&#160;800₽</div>
         </div>
         <div class="row gx-3 row-price">
-          <div class="col-6">
+          <div class="col-8">
             <a href="#">
-              - наращивание
-              <span class="service-execution-time">(3&#160;часа)</span>
+              - востановление формы ВСЕХ ногтей + маникюр с покрытием
+              <span class="service-execution-time">(2&#160;часа 30&#160;минут)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">2 500₽</div>
-          <div class="col-3">2 000₽</div>
-        </div>
-        <div class="row gx-3 row-price">
-          <div class="col-6">
-            <a href="#">
-              - коррекция наращивания
-              <span class="service-execution-time">(3&#160;часа)</span>
-              <div class="question-mark"></div>
-            </a>
-          </div>
-          <div class="col-3">2 000₽</div>
-          <div class="col-3">1 800₽</div>
-        </div>
-        <div class="row gx-3 row-price">
-          <div class="col-6">
-            <a href="#">
-              - безопасное снятие покрытия + уход (включён маникюр)
-              <span class="service-execution-time">(1&#160;час)</span>
-              <div class="question-mark"></div>
-            </a>
-          </div>
-          <div class="col-3 text-transfom-none">850₽</div>
-          <div class="col-3 text-transfom-none">850₽</div>
+          <div class="col-4">2&#160;400₽</div>
         </div>
         <div class="row gx-3">
-          <div class="col-12"><b>Педикюр</b></div>
+          <div class="col-12"><b>Наращивание</b></div>
         </div>
         <div class="row gx-3 row-price">
-          <div class="col-6">
+          <div class="col-8">
             <a href="#">
-              - «Пальчики»
-              <span class="service-execution-time">(1&#160;час)</span>
+              - наращивание ногтей с покрытием
+              <span class="service-execution-time">(3&#160;часа)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">1 500₽</div>
-          <div class="col-3">1 500₽</div>
+          <div class="col-4">3&#160;000₽</div>
         </div>
         <div class="row gx-3 row-price">
-          <div class="col-6">
+          <div class="col-8">
             <a href="#">
-              - «Гигиена»
-              <span class="service-execution-time">(1&#160;час)</span>
+              - коррекция наращивания
+              <span class="service-execution-time">(2&#160;часа 30&#160;минут)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">1 800₽</div>
-          <div class="col-3">1 800₽</div>
+          <div class="col-4">2&#160;500₽</div>
+        </div>
+        <div class="row gx-3">
+          <div class="col-12"><b>Педикюр «SMART»</b></div>
         </div>
         <div class="row gx-3 row-price">
-          <div class="col-6">
+          <div class="col-8">
             <a href="#">
-              - «Полный»
-              <span class="service-execution-time">(1&#160;час)</span>
+              - педикюр «Пальчики»
+              <span class="service-execution-time">(2&#160;часа)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">2 200₽</div>
-          <div class="col-3">2 200₽</div>
+          <div class="col-4">2&#160;000₽</div>
+        </div>
+        <div class="row gx-3 row-price">
+          <div class="col-8">
+            <a href="#">
+              - педикюр «Гигиена»
+              <span class="service-execution-time">(2&#160;часа 30&#160;минут)</span>
+              <div class="question-mark"></div>
+            </a>
+          </div>
+          <div class="col-4">2&#160;200₽</div>
+        </div>
+        <div class="row gx-3 row-price">
+          <div class="col-8">
+            <a href="#">
+              - педикюр «Полный»
+              <span class="service-execution-time">(2&#160;часа 30&#160;минут)</span>
+              <div class="question-mark"></div>
+            </a>
+          </div>
+          <div class="col-4">2&#160;700₽</div>
         </div>
         <div class="row gx-3">
           <div class="col-12"><b>Для мужчин</b></div>
         </div>
         <div class="row gx-3 row-price">
-          <div class="col-6">
+          <div class="col-8">
             <a href="#">
-              - маникюр
-              <span class="service-execution-time">(1&#160;час)</span>
+              - манюкюр с покрытием для мужчин
+              <span class="service-execution-time">(1&#160;час 30&#160;минут)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">800₽</div>
-          <div class="col-3">800₽</div>
+          <div class="col-4">1&#160;400₽</div>
         </div>
         <div class="row gx-3 row-price">
-          <div class="col-6">
+          <div class="col-8">
             <a href="#">
-              - маникюр с покрытием
-              <span class="service-execution-time">(1&#160;час)</span>
-              <div class="question-mark"></div>
-            </a>
-          </div>
-          <div class="col-3">1 400₽</div>
-          <div class="col-3">1 400₽</div>
-        </div>
-        <div class="row gx-3 row-price">
-          <div class="col-6">
-            <a href="#">
-              - педикюр Smart без покрытия
+              - педикюр «SMART» без покрытия для мужчин
               <span class="service-execution-time">(2&#160;часа)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">2 000₽</div>
-          <div class="col-3">2 000₽</div>
+          <div class="col-4">2&#160;500₽</div>
         </div>
         <div class="row gx-3">
-          <div class="col-12"><b>Дополнительно</b></div>
+          <div class="col-12"><b>Дополнительные услуги</b></div>
         </div>
         <div class="row gx-3 row-price">
-          <div class="col-6">
+          <div class="col-8">
             <a href="#">
-              - поднятие клюющих ногтей
-              <span class="service-execution-time">(15&#160;минут)</span>
+              - SPA уход для рук
+              <span class="service-execution-time">(10&#160;минут)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">от 100₽</div>
-          <div class="col-3">от 100₽</div>
+          <div class="col-4">300₽</div>
         </div>
         <div class="row gx-3 row-price">
-          <div class="col-6">
+          <div class="col-8">
             <a href="#">
-              - ремонт ногтя
-              <span class="service-execution-time">(15&#160;минут)</span>
+              - Дизайн: слайдер / ручная роспись на 1 ноготь
+              <span class="service-execution-time">(10&#160;минут)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">от 50₽</div>
-          <div class="col-3">от 50₽</div>
+          <div class="col-4">100₽</div>
         </div>
         <div class="row gx-3 row-price">
-          <div class="col-6">
+          <div class="col-8">
             <a href="#">
-              - френч, лунки, втирка
-              <span class="service-execution-time">(15&#160;минут)</span>
+              - Дизайн: френч / стемпинг / втирка на все ногти
+              <span class="service-execution-time">(30&#160;минут)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">200-300₽</div>
-          <div class="col-3">200-300₽</div>
+          <div class="col-4">300₽</div>
         </div>
         <div class="row gx-3 row-price">
-          <div class="col-6">
+          <div class="col-8">
             <a href="#">
-              - легкий дизайн
-              <span class="service-execution-time">(15&#160;минут)</span>
+              - Ремонт одного ногтя
+              <span class="service-execution-time">(55&#160;минут)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">от 50₽</div>
-          <div class="col-3">от 50₽</div>
+          <div class="col-4">100₽</div>
         </div>
         <div class="row gx-3 row-price">
-          <div class="col-6">
+          <div class="col-8">
             <a href="#">
-              - сложный дизайн
-              <span class="service-execution-time">(15&#160;минут)</span>
+              - Укрепление гелем всех ногтей
+              <span class="service-execution-time">(10&#160;минут)</span>
               <div class="question-mark"></div>
             </a>
           </div>
-          <div class="col-3">от 50₽</div>
-          <div class="col-3">от 50₽</div>
+          <div class="col-4">300₽</div>
         </div>
       </div>
 
