--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
         <div class="row gx-3 row-price">
           <div class="col-9">
             <a href="#">
-              - маникюр + педикюр «Гигиенаи»
+              - маникюр + педикюр «Гигиена»
               <span class="service-execution-time">(4&#160;часа)</span>
               <div class="question-mark"></div>
             </a>
@@ -863,7 +863,7 @@
         <div class="row gx-3 row-price">
           <div class="col-9">
             <a href="#">
-              - манюкюр с покрытием для мужчин
+              - маникюр с покрытием для&#160;мужчин
               <span class="service-execution-time">(1&#160;час 30&#160;минут)</span>
               <div class="question-mark"></div>
             </a>
@@ -873,7 +873,7 @@
         <div class="row gx-3 row-price">
           <div class="col-9">
             <a href="#">
-              - педикюр «SMART» без покрытия для мужчин
+              - педикюр «SMART» без покрытия для&#160;мужчин
               <span class="service-execution-time">(2&#160;часа)</span>
               <div class="question-mark"></div>
             </a>
@@ -896,7 +896,7 @@
         <div class="row gx-3 row-price">
           <div class="col-9">
             <a href="#">
-              - Дизайн: слайдер / ручная роспись на 1 ноготь
+              - Дизайн: слайдер / ручная роспись на 1&#160;ноготь
               <span class="service-execution-time">(10&#160;минут)</span>
               <div class="question-mark"></div>
             </a>
